--- a/Geosemantic.Client/src/app/pages/user/user.component.html
+++ b/Geosemantic.Client/src/app/pages/user/user.component.html
@@ -17,11 +17,11 @@
                 </span>
             </div>
             <div class="info-content">
-                    <form novalidate name="form" [formGroup]="form" class="p-24 mr-24" fxLayout="column" fxLayoutAlign="start"
-                        fxFlex="1 0 auto" fusePerfectScrollbar >
+                <form novalidate name="form" [formGroup]="form" class="p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
+                    fusePerfectScrollbar>
 
-                        <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
-                            <mat-form-field fxFlex="50">
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
+                        <mat-form-field fxFlex="50">
                             <input matInput placeholder="First name" formControlName="firstName" required>
                             <mat-error>First Name is required!</mat-error>
                         </mat-form-field>
@@ -29,12 +29,11 @@
                             <input matInput placeholder="Last name" formControlName="lastName" required>
                             <mat-error>Last Name is required</mat-error>
                         </mat-form-field>
-                        </div>
-                        
-                        <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
-                            <mat-form-field fxFlex="50">
-                            <input matInput placeholder="Mobile Number" onlyNumber formControlName="mobileNumber"
-                                maxlength="10" required>
+                    </div>
+
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
+                        <mat-form-field fxFlex="50">
+                            <input matInput placeholder="Mobile Number" onlyNumber formControlName="mobileNumber" maxlength="10" required>
                             <mat-error *ngIf="form.get('mobileNumber').hasError('required')">
                                 Mobile Numbe is required
                             </mat-error>
@@ -52,49 +51,48 @@
                                 Please enter a valid email address
                             </mat-error>
                         </mat-form-field>
-                        </div>
+                    </div>
 
-                        <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
-                            <mat-form-field fxFlex="50">
-                                <input matInput [matDatepicker]="picker" placeholder="Date of birth" required
-                                    formControlName="dateOfBirth">
-                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                <mat-error>Date of birth is required</mat-error>
-                                <mat-datepicker #picker></mat-datepicker>
-                            </mat-form-field>
-                            <mat-form-field fxFlex="50">
-                                <mat-select placeholder="Gender" formControlName="genderType" required>
-                                    <mat-option *ngFor="let gender of genderTypes" [value]="gender.key">
-                                        {{gender.value}}
-                                    </mat-option>
-                                </mat-select>
-                                <mat-error>Gender is required</mat-error>
-                            </mat-form-field>
-                        </div>
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
+                        <mat-form-field fxFlex="50">
+                            <input matInput [matDatepicker]="picker" placeholder="Date of birth" required formControlName="dateOfBirth">
+                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                            <mat-error>Date of birth is required</mat-error>
+                            <mat-datepicker #picker></mat-datepicker>
+                        </mat-form-field>
+                        <mat-form-field fxFlex="50">
+                            <mat-select placeholder="Gender" formControlName="genderType" required>
+                                <mat-option *ngFor="let gender of genderTypes" [value]="gender.key">
+                                    {{gender.value}}
+                                </mat-option>
+                            </mat-select>
+                            <mat-error>Gender is required</mat-error>
+                        </mat-form-field>
+                    </div>
 
-                        <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
-                            <mat-form-field fxFlex="50">
-                                <mat-select placeholder="Role" formControlName="roleId" required>
-                                    <mat-option *ngFor="let role of roleTypes" [value]="role.id">
-                                        {{role.name}}
-                                    </mat-option>
-                                </mat-select>
-                                <mat-error>Role is required</mat-error>
-                            </mat-form-field>
-                        </div>
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
+                        <mat-form-field fxFlex="50">
+                            <mat-select placeholder="Role" formControlName="roleId" required>
+                                <mat-option *ngFor="let role of roleTypes" [value]="role.id">
+                                    {{role.name}}
+                                </mat-option>
+                            </mat-select>
+                            <mat-error>Role is required</mat-error>
+                        </mat-form-field>
+                    </div>
 
-                        <div fxLayout="row" class="button-bar" fxLayoutAlign="end center">
-                            <button mat-raised-button color="warn" [routerLink]="'/users'">
-                                <mat-icon class="material-icons md-36">remove</mat-icon>
-                                Cancel
-                            </button>
+                    <div fxLayout="row" class="button-bar" fxLayoutAlign="end center">
+                        <button mat-raised-button color="warn" [routerLink]="'/users'">
+                            <mat-icon class="material-icons md-36">remove</mat-icon>
+                            Cancel
+                        </button>
 
-                            <button mat-raised-button color="accent" (click)="save()">
-                                <mat-icon class="material-icons md-36">save</mat-icon>
-                                Save
-                            </button>
-                        </div>
-                    </form>
+                        <button mat-raised-button color="accent" (click)="save()">
+                            <mat-icon class="material-icons md-36">save</mat-icon>
+                            Save
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
