--- a/Geosemantic.Client/src/app/pages/register/register.component.html
+++ b/Geosemantic.Client/src/app/pages/register/register.component.html
@@ -1,73 +1,101 @@
-<div id="register" fxLayout="column">
+<div id="register" class="page-layout carded fullwidth inner-scroll">
 
-    <div id="register-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
-
-        <div id="register-form" [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
-
-            <div class="logo">
-                <img src="assets/images/logos/fuse.svg">
-            </div>
-
-            <div class="title">CREATE AN ACCOUNT</div>
-
-            <form name="registerForm" [formGroup]="registerForm" novalidate>
-
-                <mat-form-field>
-                    <input matInput placeholder="Name" formControlName="name">
-                    <mat-error>
-                        Name is required
-                    </mat-error>
-                </mat-form-field>
-
-                <mat-form-field>
-                    <input matInput placeholder="Email" formControlName="email">
-                    <mat-error *ngIf="registerForm.get('email').hasError('required')">
-                        Email is required
-                    </mat-error>
-                    <mat-error *ngIf="registerForm.get('email').hasError('email')">
-                        Please enter a valid email address
-                    </mat-error>
-                </mat-form-field>
-
-                <mat-form-field>
-                    <input matInput type="password" placeholder="Password" formControlName="password">
-                    <mat-error>
-                        Password is required
-                    </mat-error>
-                </mat-form-field>
-
-                <mat-form-field>
-                    <input matInput type="password" placeholder="Password (Confirm)" formControlName="passwordConfirm">
-                    <mat-error *ngIf="registerForm.get('passwordConfirm').hasError('required')">
-                        Password confirmation is required
-                    </mat-error>
-                    <mat-error *ngIf="!registerForm.get('passwordConfirm').hasError('required') &&
-                                       registerForm.get('passwordConfirm').hasError('passwordsNotMatching')">
-                        Passwords must match
-                    </mat-error>
-                </mat-form-field>
-
-                <div class="terms" fxLayout="row" fxLayoutAlign="center center">
-                    <mat-checkbox name="terms" aria-label="I read and accept" required>
-                        <span>I read and accept</span>
-                    </mat-checkbox>
-                    <a href="#">terms and conditions</a>
+    <div class="top-bg accent"></div>
+    <div class="center">
+        <div class="header accent" fxLayout="column" fxLayoutAlign="center start">
+            <div class="title-bar" fxLayout="column" fxLayoutAlign="top start" fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="space-between center">
+                <div class="logo my-12 m-sm-0 pt-14" fxLayout="row" fxLayoutAlign="start center">
+                    <span class="logo-text h1" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
+                        User Detail
+                    </span>
                 </div>
-
-                <button mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT"
-                        [disabled]="registerForm.invalid">
-                    CREATE AN ACCOUNT
-                </button>
-
-            </form>
-
-            <div class="register" fxLayout="column" fxLayoutAlign="center center">
-                <span class="text">Already have an account?</span>
-                <a class="link" [routerLink]="'/login'">Login</a>
             </div>
-
         </div>
+        <div class="content-card">
+            <div class="card-header" fxLayout="row" fxLayoutAlign="start center">
+                <span class="card-text h2" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
+                    {{cardTitle}}
+                </span>
+            </div>
+            <div class="info-content">
+                <form novalidate name="registerForm" [formGroup]="registerForm" class="p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
+                    fusePerfectScrollbar>
 
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
+                        <mat-form-field fxFlex="50">
+                            <input matInput placeholder="First name" formControlName="firstName" required>
+                            <mat-error>First Name is required!</mat-error>
+                        </mat-form-field>
+                        <mat-form-field fxFlex="50">
+                            <input matInput placeholder="Last name" formControlName="lastName" required>
+                            <mat-error>Last Name is required</mat-error>
+                        </mat-form-field>
+                    </div>
+
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
+                        <mat-form-field fxFlex="50">
+                            <input matInput placeholder="Mobile Number" onlyNumber formControlName="mobileNumber" maxlength="10" required>
+                            <!-- <mat-error *ngIf="register.get('mobileNumber').hasError('required')">
+                                Mobile Numbe is required
+                            </mat-error>
+                            <mat-error *ngIf="!register.get('mobileNumber').hasError('required') && register.get('mobileNumber').hasError('maxlength')">
+                                MobileNumber should not exceed 10 character
+                            </mat-error> -->
+                        </mat-form-field>
+
+                        <mat-form-field fxFlex="50">
+                            <input matInput placeholder="Email" formControlName="emailAddress">
+                            <!-- <mat-error *ngIf="register.get('emailAddress').hasError('required')">
+                                Email is required
+                            </mat-error>
+                            <mat-error *ngIf="!register.get('emailAddress').hasError('required') && register.get('emailAddress').hasError('email')">
+                                Please enter a valid email address
+                            </mat-error> -->
+                        </mat-form-field>
+                    </div>
+
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
+                        <mat-form-field fxFlex="50">
+                            <input matInput [matDatepicker]="picker" placeholder="Date of birth" required formControlName="dateOfBirth">
+                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                            <mat-error>Date of birth is required</mat-error>
+                            <mat-datepicker #picker></mat-datepicker>
+                        </mat-form-field>
+                        <mat-form-field fxFlex="50">
+                            <mat-select placeholder="Gender" formControlName="genderType" required>
+                                <mat-option *ngFor="let gender of genderTypes" [value]="gender.key">
+                                    {{gender.value}}
+                                </mat-option>
+                            </mat-select>
+                            <mat-error>Gender is required</mat-error>
+                        </mat-form-field>
+                    </div>
+
+                    <div fxLayout="column" fxLayout.gt-xs="row" fxFlex="1 0 auto">
+                        <mat-form-field fxFlex="50">
+                            <mat-select placeholder="Role" formControlName="roleId" required>
+                                <mat-option *ngFor="let role of roleTypes" [value]="role.id">
+                                    {{role.name}}
+                                </mat-option>
+                            </mat-select>
+                            <mat-error>Role is required</mat-error>
+                        </mat-form-field>
+                    </div>
+
+                    <div fxLayout="row" class="button-bar" fxLayoutAlign="end center">
+                        <button mat-raised-button color="warn" [routerLink]="'/users'">
+                            <!-- <mat-icon class="material-icons md-36">remove</mat-icon> -->
+                            Cancel
+                        </button>
+
+                        <button mat-raised-button color="accent" (click)="save()">
+                            <!-- <mat-icon class="material-icons md-36">save</mat-icon> -->
+                            Save
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
 </div>
