added save user command

--- a/Geosemantic.Client/src/app/pages/login/login.component.html
+++ b/Geosemantic.Client/src/app/pages/login/login.component.html
@@ -50,18 +50,18 @@
                 </button>
 
             </form>
-            <div  class="button-bar" fxLayout="row" fxLayoutAlign="center center">
+            <!-- <div  class="button-bar" fxLayout="row" fxLayoutAlign="center center">
                 <button mat-raised-button color="accent"  aria-label="LOG IN" (click)="loginStatic('9600155567','reset@123')">
-                    Vel LOGIN
+                    Register
                 </button>
                 <button mat-raised-button color="accent"  aria-label="LOG IN" (click)="loginStatic('9789978997','bash@123')">
                     Basheer LOGIN
-                </button>
-            </div>
-            <!-- <div class="register" fxLayout="column" fxLayoutAlign="center center">
+                </button> 
+            </div> -->
+            <div class="register" fxLayout="column" fxLayoutAlign="center center">
                 <span class="text">Don't have an account?</span>
                 <a class="link" [routerLink]="'/register'">Create an account</a>
-            </div> -->
+            </div>
 
         </div>
 
