added gmail smtp settings

--- a/Geosemantic.Command/Email/Templates/Users/UserRegistration.html
+++ b/Geosemantic.Command/Email/Templates/Users/UserRegistration.html
@@ -26,13 +26,13 @@
                 color: #fff;
             }
 
-            .fixed-footer {
-                width: 100%;
-                position: fixed;
-                background: #FF961F;
-                padding: 10px 0;
-                color: black;
-            }
+        .fixed-footer {
+            width: 100%;
+            position: fixed;
+            background: #3B17FF;
+            padding: 10px 0;
+            color: black;
+        }
 
             .fixed-header {
                 top: 0;
