register from changes updated

--- a/Geosemantic.Client/src/app/layout/components/navbar/vertical/style/style.component.html
+++ b/Geosemantic.Client/src/app/layout/components/navbar/vertical/style/style.component.html
@@ -2,7 +2,7 @@
 
     <div class="logo">
         <img class="logo-icon" src="assets/images/logos/icon_react_bw_white_48.png">
-        <span class="logo-text secondary-text"><strong>REACT</strong></span>
+        <span class="logo-text secondary-text"><strong>Geosemantic</strong></span>
     </div>
 
     <div class="buttons">
