--- a/Geosemantic.Client/src/app/pages/newsletter/newsletter.component.html
+++ b/Geosemantic.Client/src/app/pages/newsletter/newsletter.component.html
@@ -1,4 +1,4 @@
-<div id="search-modern" class="page-layout simple fullwidth">
+<div id="newsletter" class="page-layout simple fullwidth">
 
     <!-- HEADER -->
     <div class="header accent p-24" fxLayout="row" fxLayoutAlign="start center">
