--- a/Geosemantic.Client/src/app/app.theme.scss
+++ b/Geosemantic.Client/src/app/app.theme.scss
@@ -83,7 +83,7 @@ $typography: mat-typography-config(
 @import "src/app/pages/login/login.theme";
 @import "src/app/pages/register/register.theme";
 @import "src/app/pages/forgot-password/forgot-password.theme";
-
+@import "src/app/pages/newsletter/newsletter.theme";
 // Define a mixin for easier access
 @mixin components-theme($theme) {
 
@@ -93,6 +93,7 @@ $typography: mat-typography-config(
     @include login-theme($theme);
     @include register-theme($theme);
     @include forgot-password-theme($theme);
+    @include newsletter-theme($theme);
 }
 
 // -----------------------------------------------------------------------------------------------------
