--- a/Geosemantic.Client/src/app/pages/underriview/underriview.component.html
+++ b/Geosemantic.Client/src/app/pages/underriview/underriview.component.html
@@ -21,11 +21,17 @@
                         <mat-card>
 
                             <mat-card-header>
-                                    <div mat-card-avatar fxLayout="row" fxLayoutAlign="start center">
-                                            <img src="assets/images/avatars/profile.jpg" class="mat-avatar avatar" alt="{{users.fullName}}" fxHide fxShow.gt-sm/>
-        
-                                        </div>
-                                <mat-card-title>Profile Under Review </mat-card-title>
+                                <div mat-card-avatar fxLayout="row" fxLayoutAlign="start center">
+                                    <img src="assets/images/avatars/profile.jpg" class="mat-avatar avatar" alt="{{users.fullName}}" fxHide fxShow.gt-sm/>
+
+                                </div>
+                                <mat-card-title>
+                                    <div class="card-header" fxLayout="row" fxLayoutAlign="center">
+                                        <span class="card-text h2" [@animate]="{value:'*',params:{delay:'100ms',x:'250px'}}">
+                                            Profile Under Review
+                                        </span>
+                                    </div>
+                                </mat-card-title>
                             </mat-card-header>
                             <mat-card-content>
                                 Thank you for registering with us! Your profile is on under review, you will be notified through email once your profile
@@ -33,8 +39,8 @@
                             </mat-card-content>
                             <div class="button-bar" fxLayout="row" fxLayoutAlign="left center">
                                 <button mat-raised-button color="accent" aria-label="LOG IN" (click)="login()">
-                                        LOGIN
-                                </button>                               
+                                    LOGIN
+                                </button>
                             </div>
                         </mat-card>
                     </div>
